--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "whatsapp-pair-bot",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^7.0.0-rc.9",
+    "@whiskeysockets/baileys": "^7.0.0",
     "express": "^4.21.2",
-    "pino": "^9.6.0"
+    "pino": "^9.6.0",
+    "axios": "^1.7.9",
+    "qrcode-terminal": "^0.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   },
   "engines": {
-    "node": "20.x || 22.x"
+    "node": "18.x || 20.x || 22.x"
   }
 }
