--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "whatsapp-pair-bot",
+  "name": "whatsapp-bot-mini",
   "version": "2.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^7.0.0",
-    "express": "^4.21.2",
-    "pino": "^9.6.0",
-    "axios": "^1.7.9",
-    "qrcode-terminal": "^0.12.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@whiskeysockets/baileys": "6.5.0",
+    "express": "^4.18.2",
+    "pino": "^8.15.0"
   },
   "engines": {
-    "node": "18.x || 20.x || 22.x"
+    "node": ">=18.0.0"
   }
 }
