--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "whatsapp-bot-mini",
+  "name": "whatsapp-pair-bot",
   "version": "2.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "6.5.0",
-    "express": "^4.18.2",
-    "pino": "^8.15.0"
+    "express": "^4.21.2",
+    "pino": "^9.6.0"
   },
   "engines": {
     "node": ">=18.0.0"
