--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
   "name": "whatsapp-pair-bot",
-  "version": "1.0.0",
+  "version": "2.0.0",
+  "description": "Viral-Bot Mini - Feature-rich WhatsApp Bot",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests specified\" && exit 0"
   },
+  "keywords": [
+    "whatsapp",
+    "bot",
+    "baileys",
+    "whatsapp-bot"
+  ],
+  "author": "Calyx Drey",
+  "license": "MIT",
   "dependencies": {
-    "@whiskeysockets/baileys": "^7.0.0-rc.9",
+    "@whiskeysockets/baileys": "^7.0.0",
     "express": "^4.21.2",
     "pino": "^9.6.0"
   },
   "engines": {
-    "node": "20.x || 22.x"
+    "node": ">=18.0.0"
   }
 }
