--- a/package.json
+++ b/package.json
@@ -1,21 +1,12 @@
 {
-  "name": "whatsapp-pair-bot",
+  "name": "viral-bot-mini",
   "version": "2.0.0",
-  "description": "Viral-Bot Mini - Feature-rich WhatsApp Bot",
+  "description": "Viral-Bot Mini WhatsApp Bot",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "render-start": "node server.js"
   },
-  "keywords": [
-    "whatsapp",
-    "bot",
-    "baileys",
-    "whatsapp-bot"
-  ],
-  "author": "Calyx Drey",
-  "license": "MIT",
   "dependencies": {
     "@whiskeysockets/baileys": "^7.0.0",
     "express": "^4.21.2",
