--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "whatsapp-pair-bot",
-  "version": "1.0.0",
+  "name": "viral-bot-mini",
+  "version": "2.0.0",
+  "description": "Viral-Bot Mini WhatsApp Bot",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "render-start": "node server.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^7.0.0-rc.9",
+    "@whiskeysockets/baileys": "^6.5.0",
     "express": "^4.21.2",
-    "pino": "^9.6.0"
+    "pino": "^8.15.6"
   },
   "engines": {
-    "node": "20.x || 22.x"
+    "node": ">=16.0.0"
   }
 }
