--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "viral-bot-mini",
-  "version": "2.0.0",
-  "description": "Viral-Bot Mini WhatsApp Bot",
+  "name": "whatsapp-bot",
+  "version": "1.0.0",
+  "description": "WhatsApp Bot with Pair Code System",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "render-start": "node server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.5.0",
-    "express": "^4.21.2",
-    "pino": "^8.15.6"
+    "express": "^4.18.2",
+    "whatsapp-web.js": "^1.23.0",
+    "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.7.2",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "18.x"
   }
 }
