--- a/.env
+++ b/.env
@@ -1,8 +1,16 @@
-# Port for the server
+# Server Port
 PORT=3000
 
-# Session storage path (optional)
+# Session Storage
 SESSION_PATH=./sessions
 
-# Timezone (optional)
-TZ=UTC
+# Logging Level
+LOG_LEVEL=info
+
+# WhatsApp Configuration
+WHATSAPP_VERSION=2.2412.54
+WHATSAPP_BROWSER=Chrome
+
+# Security
+MAX_PAIR_ATTEMPTS=3
+PAIR_CODE_EXPIRY_MINUTES=10
