--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "whatsapp-bot",
+  "name": "whatsapp-bot-baileys",
   "version": "1.0.0",
-  "description": "WhatsApp Bot with Pair Code System",
+  "description": "WhatsApp Bot with Pair Code System using Baileys",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "whatsapp-web.js": "^1.23.0",
-    "qrcode-terminal": "^0.12.0",
+    "@whiskeysockets/baileys": "^6.4.0",
     "socket.io": "^4.7.2",
     "dotenv": "^16.3.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "qrcode": "^1.5.3",
+    "uuid": "^9.0.0"
   },
   "engines": {
     "node": "18.x"
