--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "whatsapp-bot-baileys",
+  "name": "baileys-pair-web-bot",
   "version": "1.0.0",
-  "description": "WhatsApp Bot with Pair Code System using Baileys",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "@whiskeysockets/baileys": "^6.4.0",
-    "socket.io": "^4.7.2",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "qrcode": "^1.5.3",
-    "uuid": "^9.0.0"
-  },
-  "engines": {
-    "node": "18.x"
+    "@whiskeysockets/baileys": "^6.7.0",
+    "express": "^4.19.2",
+    "pino": "^8.17.0"
   }
 }
