--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "baileys-pair-web-bot",
-  "version": "1.0.0",
-  "main": "server.js",
+  "version": "1.0.1",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.0",
