--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "whatsapp-pair-bot",
-  "version": "1.0.0",
+  "name": "render-baileys-pair",
+  "version": "1.0.2",
+  "type": "module",
   "main": "server.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
-    "express": "^4.19.2",
     "@whiskeysockets/baileys": "^6.7.0",
-    "pino": "^8.19.0"
+    "express": "^4.19.2",
+    "pino": "^8.17.0"
   }
 }
