--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "render-baileys-pair",
-  "version": "1.0.2",
-  "type": "module",
+  "name": "whatsapp-pair-bot",
+  "version": "1.0.0",
+  "description": "WhatsApp Bot with Pairing Code Web Interface",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.0",
-    "express": "^4.19.2",
-    "pino": "^8.17.0"
+    "@whiskeysockets/baileys": "^6.6.0",
+    "express": "^4.18.2",
+    "pino": "^8.14.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5"
   }
 }
