--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsapp-pair-bot",
+  "name": "viral-bot-mini",
   "version": "1.0.0",
   "description": "WhatsApp Bot with Pairing Code Web Interface",
   "main": "server.js",
@@ -10,7 +10,7 @@
     "@whiskeysockets/baileys": "^6.6.0",
     "express": "^4.18.2",
     "pino": "^8.14.1",
-    "body-parser": "^1.20.2",
+    "axios": "^1.6.0",
     "cors": "^2.8.5"
   }
 }
