--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "repository": "https://github.com/XdKing2/free-sc-mini",
     
     "keywords": [
-    "TOMB-HACKER","Calyx-Drey"
+    "malvin-xd","XdKing2"
     ],
     
     "success_url": "/", 
